--- a/src/select/select.css
+++ b/src/select/select.css
@@ -37,6 +37,12 @@
   min-height: 100px !important;
 }
 
+:host([layout='horizontal'][multiple]) ::slotted(label),
+:host([layout='horizontal'][size]) ::slotted(label) {
+  padding-top: var(--nve-ref-size-100) !important;
+  align-self: start !important;
+}
+
 :host(:--invalid),
 :host(:--error) {
   --border: var(--nve-ref-border-width-md) solid var(--nve-sys-status-danger-background);
